<resources>
    <string name="app_name">coronatracker</string>
    <string name="title_main_activity">COVID-19</string>
    <string name="total_confirmed">Total Confirmed</string>
    <string name="total_deaths">Total Deaths</string>
    <string name="total_recovered">Total Recovered</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="active">Active cases</string>
    <string name="critical">Critical cases</string>
    <string name="today_cases">Today cases</string>
    <string name="today_deaths">Today deaths</string>
</resources>
