<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/clRoot"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/background_column"
    android:padding="@dimen/widget_margin">

    <RelativeLayout
        android:layout_toStartOf="@id/rlDeaths"
        android:layout_toEndOf="@id/rlRecovered"
        android:id="@+id/rlConfirmed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/background_column">

        <TextView
            android:fontFamily="@font/baloo_regular"
            android:id="@+id/tvTitleConfirmed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="8dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="8dp"
            android:text="@string/total_confirmed"
            android:textColor="@android:color/white"
            android:textSize="10sp" />

        <TextView
            android:fontFamily="@font/baloo_regular"
            android:layout_marginBottom="10dp"
            android:id="@+id/tvNumberTotalConfirmedWidget"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvTitleConfirmed"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:textColor="@color/redNumberConfirmed"
            android:textSize="16sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <RelativeLayout
        android:minWidth="80dp"
        android:layout_alignParentEnd="true"
        android:id="@+id/rlDeaths"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/background_column"
        android:gravity="center_horizontal">

        <TextView
            android:fontFamily="@font/baloo_regular"
            android:id="@+id/tvTitleDeaths"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="8dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="8dp"
            android:text="@string/total_deaths"
            android:textColor="@android:color/white"
            android:textSize="10sp" />

        <TextView
            android:fontFamily="@font/baloo_regular"
            android:layout_marginBottom="10dp"
            android:id="@+id/tvNumberTotalDeathsWidget"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvTitleDeaths"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <RelativeLayout
        android:minWidth="80dp"
        android:layout_alignParentStart="true"
        android:id="@+id/rlRecovered"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/background_column"
        android:gravity="center_horizontal">

        <TextView
            android:fontFamily="@font/baloo_regular"
            android:maxLines="1"
            android:id="@+id/tvTitleRecovered"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="8dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="8dp"
            android:text="@string/total_recovered"
            android:textColor="@android:color/white"
            android:textSize="10sp" />

        <TextView
            android:fontFamily="@font/baloo_regular"
            android:layout_marginBottom="10dp"
            android:maxLines="1"
            android:id="@+id/tvNumberTotalRecoveredWidget"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvTitleRecovered"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="15dp"
            android:textColor="@color/greenNumberRecovered"
            android:textSize="17sp"
            android:textStyle="bold" />

    </RelativeLayout>

</RelativeLayout>